--- a/public/css/style.css
+++ b/public/css/style.css
@@ -982,3 +982,27 @@ section h2 {
 #Table-Routine .btn-outline-info:focus {
     background: #ffffff !important;
 }
+
+.mapboxgl-ctrl-geocoder {
+    border: 1px solid #ced4da !important;
+    box-shadow: none !important;
+    min-width: 20px !important;
+    max-width: inherit !important;
+    width: 100% !important;
+}
+
+#map-routes {
+    position: sticky;
+    top: 65px;
+}
+
+#map-routes,
+#map-canvas {
+    width:100%;
+    height: 100%;
+    min-height: 300px;
+    max-height: 400px;
+    border: 2px solid #056af7;
+    border-radius: 0.25rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
