--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1030,3 +1030,10 @@ section h2 {
     border-radius: 0.25rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.clear-waypoints:hover {
+    cursor: pointer;
+    filter: drop-shadow(0 0 5px rgba(0,0,0,0.5));
+    zoom: 1.1;
+    transition: ease-in-out;
+}
